@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Correctly inform player of lost overall level at death.
+Nicolas Weeger 2010-08-14
+
 Make Python's Object.Anim a String in both read and write.
 Raise an error if invalid animation is set.
 Nicolas Weeger 2010-08-14
